<resources>
    <string name="app_name">InventoryApp</string>

    <!-- activity_catalog -->
    <string name="activity_nodevice">NO DEVICES YET</string>
    <string name="activity_addevice">Get started by adding a device</string>

    <!-- activity_device_layout -->
    <string name="layout_device">Device name</string>
    <string name="layout_devicename">ExampleDevice</string>
    <string name="layout_price">Price</string>
    <string name="layout_pricewithnumbers">99 USD</string>
    <string name="layout_contact">Supplier contact</string>
    <string name="layout_contactinfo">+1 2345 678</string>
    <string name="layout_quantity">Quantity</string>
    <string name="layout_quantitywithnumbers">10 pieces</string>
    <string name="layout_minus">-</string>
    <string name="layout_plus">+</string>
    <string name="layout_delete">delete</string>
    <string name="layout_order">order</string>

    <!-- activity_editor -->
    <string name="category_overview">Overview</string>
    <string name="editor_hintname">name</string>
    <string name="category_quantity">Quantity</string>
    <string name="editor_hintquantity">amount</string>
    <string name="editor_pieces">pieces</string>
    <string name="category_price">Price</string>
    <string name="editor_hintprice">price</string>
    <string name="editor_price">USD</string>
    <string name="category_contact">Supplier contact</string>
    <string name="category_hintemail">example@example.com</string>
    <string name="picture_button">Add a picture</string>

    <!-- activity list_item -->
    <string name="list_name">Name</string>
    <string name="list_device">DummyDevice</string>
    <string name="list_price">Price</string>
    <string name="list_pricewithnumbers">100 USD</string>
    <string name="list_amount">Amount</string>
    <string name="list_amountwithnumbers">4 pieces</string>
    <string name="list_buy">Buy</string>

    <!--Editor java -->
    <string name="editor_insert_device_failed">Error with saving device</string>
    <string name="editor_update_device_successful">Device updated</string>

    <string name="name_required">Please enter a name</string>
    <string name="quantity_required">Please enter a quantity</string>
    <string name="price_required">Please enter a price</string>
    <string name="contact_required">Please enter a contact</string>
    <string name="picture_required">Please add a picture</string>

    <string name="picture_added">You have added a picture</string>

    <string name="delete_dialog_msg">Delete this device?</string>
    <string name="editor_delete_device_failed">Error with deleting device</string>
    <string name="editor_delete_device_successful">Device deleted</string>

    <string name="action_delete_all_entries">Delete all devices</string>

    <string name="action_save">Save</string>

    <string name="action_delete">Delete</string>

    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <string name="discard">Discard</string>

    <string name="keep_editing">Keep Editing</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Dialog button text for the option to confirm deleting the current pet [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current pet [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>
</resources>
