<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="16dp">

            <TextView
                style="@style/EditorFieldStyle"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:paddingRight="12dp"
                android:text="@string/layout_device"/>

            <TextView
                android:id="@+id/display_device_name"
                style="@style/EditorFieldStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/layout_devicename"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="16dp">

            <TextView
                style="@style/EditorFieldStyle"
                android:layout_width="120dp"
                android:text="@string/layout_price" />

            <TextView
                android:id="@+id/display_device_price"
                style="@style/EditorFieldStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/layout_pricewithnumbers"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="16dp">

            <TextView
                style="@style/EditorFieldStyle"
                android:layout_width="120dp"
                android:text="@string/layout_contact" />

            <TextView
                android:id="@+id/display_contact_info"
                style="@style/EditorFieldStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/layout_contactinfo"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/EditorFieldStyle"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/layout_quantity"/>

            <TextView
                android:id="@+id/display_device_quantity"
                style="@style/EditorFieldStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/layout_quantitywithnumbers"/>

            <Button
                android:id="@+id/minus_button"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/layout_minus"/>

            <Button
                android:id="@+id/plus_button"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/layout_plus"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/display_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/delete_button"
            style="@style/LayoutButton"
            android:text="@string/layout_delete"/>

        <Button
            android:id="@+id/order_button"
            style="@style/LayoutButton"
            android:text="@string/layout_order"/>


    </LinearLayout>

</LinearLayout>